# ENPM808_Final

./: .travis.yml  CMakeLists.txt  README.md  package.xml
docs/: Doxyfile
docs/html/: annotated.html  cameraTest_8cpp.html  camera_8cpp.html  camera_8hpp.html  camera_8hpp_source.html  classCamera-members.html  classCamera.html  classMotionController-members.html  classMotionController.html  classObstacleDetection-members.html  classObstacleDetection.html  classVehicle-members.html  classVehicle.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  motionControllerTest_8cpp.html  motionController_8cpp.html  motionController_8hpp.html  motionController_8hpp_source.html  obstacleDetectionTest_8cpp.html  obstacleDetection_8cpp.html  obstacleDetection_8hpp.html  obstacleDetection_8hpp_source.html  src_2main_8cpp.html  test_2main_8cpp.html  vehicleTest_8cpp.html  vehicle_8cpp.html  vehicle_8hpp.html  vehicle_8hpp_source.html
docs/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  search.js
docs/latex/: annotated.tex  cameraTest_8cpp.tex  camera_8cpp.tex  camera_8hpp.tex  classCamera.tex  classMotionController.tex  classObstacleDetection.tex  classVehicle.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  motionControllerTest_8cpp.tex  motionController_8cpp.tex  motionController_8hpp.tex  obstacleDetectionTest_8cpp.tex  obstacleDetection_8cpp.tex  obstacleDetection_8hpp.tex  refman.tex  src_2main_8cpp.tex  test_2main_8cpp.tex  vehicleTest_8cpp.tex  vehicle_8cpp.tex  vehicle_8hpp.tex
gazebo_world/: turtlebot_walker_demo_2
include/: camera.hpp  motionController.hpp  obstacleDetection.hpp  vehicle.hpp
launch/: enpm808_final.launch  gazebo_imageview_demo.launch  rviz_demo.launch
results/: cppcheck_results.txt  cpplint_results.txt
rviz/: enpm808_demo.rviz
src/: camera.cpp  main.cpp  motionController.cpp  obstacleDetection.cpp  vehicle.cpp
srv/: changeSpeedService.srv  changeThresholdService.srv  takeImageService.srv
test/: cameraTest.cpp  enpm808_finalTest.launch  main.cpp  motionControllerTest.cpp  obstacleDetectionTest.cpp  vehicleTest.cpp
